@@ -57,6 +57,9 @@ Version 1.11.0-svn:
      (feature/bug #3797)
    * Fixed excessive idle CPU usage in story screens without story text
    * Map editor now displays invisible overlay terrains on main map
+   * Made add-ons with markup characters at the start of their titles
+     display normally in the add-ons management dialogs (e.g. without
+     colors)
  * Whiteboard
    * Fixed bug #19369: Using planning mode can cause losing ability to move my units
    * Fixed bug #19408: Crash shortly after executing invalid multi-turn move
